<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/home"
                    android:background="@color/colorButton"
                    android:layout_margin="5dp"
                    android:textSize="19sp"
                    android:textColor="@color/colorText"
                    android:id="@+id/home"
                    android:clickable="true"
                    android:cursorVisible="true"

                    />
                <Button
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/aboutus"
                    android:background="@color/colorButton"
                    android:layout_margin="5dp"
                    android:textSize="19sp"
                    android:textColor="@color/colorText"
                    android:id="@+id/aboutus"/>
                <Button
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/contactus"
                    android:background="@color/colorButton"
                    android:layout_margin="6dp"
                    android:textSize="19sp"
                    android:textColor="@color/colorText"
                    android:id="@+id/contactus"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/headctnus"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:textDirection="firstStrong"
                    android:textColor="@color/colorRed"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="20sp"
                    android:textColor="@color/colorButton"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/headabtus"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/colorButton"
                    android:textAlignment="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ceo"
                    android:textSize="20sp"
                    android:textColor="@color/colorButton"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addressdetails"
                    android:textSize="20sp"
                    android:textColor="@color/colorButton"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:id="@+id/hinttext"
                    android:hint="@string/enquiry"
                    android:textSize="20sp"

                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/hintno"
                    android:hint="@string/enquiryno"
                    android:textSize="25sp"

                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Send SMS"
                    android:background="@color/colorButton"
                    android:textColor="@color/colorText"
                    android:textSize="20sp"/>
            </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>