<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">


    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <Button
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/home"
                    android:background="@color/colorButton"
                    android:layout_margin="5dp"
                    android:textSize="19sp"
                    android:textColor="@color/colorText"
                    android:id="@+id/home"
                    android:clickable="true"
                    android:cursorVisible="true"

                    />
                <Button
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/aboutus"
                    android:background="@color/colorButton"
                    android:layout_margin="5dp"
                    android:textSize="19sp"
                    android:textColor="@color/colorText"
                    android:id="@+id/aboutus"/>
                <Button
                    android:layout_width="120dp"
                    android:layout_height="50dp"
                    android:text="@string/contactus"
                    android:background="@color/colorButton"
                    android:layout_margin="6dp"
                    android:textSize="19sp"
                    android:textColor="@color/colorText"
                    android:id="@+id/contactus"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/headabtus"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:textDirection="firstStrong"
                    android:textColor="@color/colorRed"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abtus"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/colorButton"
                    android:textAlignment="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/factsheet"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:textDirection="firstStrong"
                    android:textColor="@color/colorRed"
                    android:layout_margin="5dp"/>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow>
                        <TextView
                            android:text="@string/basicinfo"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>

                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="Nature of Business:"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="Manufacturer"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="CEO:"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="@string/ceo"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/employees"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="10"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="Year of Establishment:"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="1995"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>

                    <TableRow>
                        <TextView
                            android:text="Banker:"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="ICICI Bank LTD"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="Ownership Type:"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="@string/ownership"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/compusp"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>

                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/qual"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="Yes"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="@string/all"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>

                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="Customized Packaging"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="Yes"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="Payment Mode"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="@string/paymentmode"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:text="Shipment Mode"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"
                            android:textStyle="italic"
                            />
                        <TextView
                            android:text="By Road"
                            android:padding="3dip"
                            android:textSize="20sp"
                            android:textColor="@color/colorButton"/>
                    </TableRow>
                </TableLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/whyus"
                    android:textAlignment="center"
                    android:textSize="30dp"
                    android:textStyle="bold"
                    android:typeface="serif"
                    android:textDirection="firstStrong"
                    android:textColor="@color/colorRed"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/whyuscont"
                    android:textSize="20sp"
                    android:textStyle="normal"
                    android:textColor="@color/colorButton"
                    android:textAlignment="center"/>
            </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>